--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -104,3 +104,29 @@
     align-items: center;
     grid-gap: 5px;
 }
+
+.helpline-card {
+    margin-bottom: 20px;
+    background: #fff;
+    border-radius: 10px;
+    border: 1px solid #efefef;
+    padding: 15px;
+    box-shadow: 0px 0px 6px #00000015;
+}
+
+.img-book {
+    background: #383838;
+    padding: 50px;
+    text-align: center;
+    width: 100%;
+    height: 500px;
+    overflow-y: auto;
+}
+
+@media screen and (max-width: 768px){
+    .img-book {
+        padding: 30px 10px;
+    }
+}
+
+.img-book img:not(:first-child) {background: white;padding: 4px;}
