--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -130,3 +130,83 @@
 }
 
 .img-book img:not(:first-child) {background: white;padding: 4px;}
+
+
+.responsive-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #1d1d1d;
+    padding: 0px 20px;
+    z-index: 9999;
+    max-height: 0px;
+    opacity: 0;
+    overflow: hidden;
+    transition: all 200ms ease-in;
+  }
+  
+  .responsive-menu.show {
+    max-height: 100vh;
+    padding: 20px;
+    opacity: 1;
+  }
+  
+  @media screen and (min-width: 769px) {
+    .responsive-menu {
+      display: none;
+    }
+  }
+  
+  .responsive-menu ul li {
+    position: relative;
+    border-bottom: 1px solid #000000;
+  }
+  
+  .responsive-menu ul li::after {
+    position: absolute;
+    top: 100%;
+    left: 0%;
+    width: 0%;
+    height: 1px;
+    background: #00d285;
+    content: '';
+    transform: translate(0%, 0%);
+    transition: 200ms;
+  }
+  
+  .responsive-menu ul li:hover::after {
+    width: 100%;
+    transition: 300ms;
+  }
+  
+  .responsive-menu ul li:last-child {
+    border-bottom: 0px solid #f3f3f3;
+  }
+  
+  .responsive-menu ul li a {
+    display: block;
+    padding: 10px 0px;
+    color: #d3d3d3;
+    font-weight: 500;
+  }
+  
+  .responsive-menu ul li a:hover {
+    color: #00d285;
+    text-decoration: none;
+  }
+
+ #rs-menu-bar {
+      display: none;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 0px;
+      color: #ffffff;
+      cursor: pointer;
+  }
+
+  @media screen and (max-width: 768px) {
+    #rs-menu-bar {
+        display: flex;
+    }
+  }
